About Page Update: Added picture

--- a/profile/justiceprofile.html
+++ b/profile/justiceprofile.html
@@ -18,8 +18,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
+           <img src="justiceprofile.jpg" style="width:50%" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-white">
             <h3>Justice Chase</h3>
           </div>
         </div>
@@ -67,7 +67,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>SFSU Student </b></h5>
           <h6 class="w3-text-teal"><i class=""></i>* Computer Science  <span class=""></span></h6>
           <h6 class="w3-text-teal"><i class=""></i>* Spring 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <h6 class="w3-text-teal"><i class=""></i>* Web Development! All I need to know in one place  <span class=""></span></h6>
           <hr>
         </div>
       </div>
@@ -97,9 +96,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 <footer class="container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-text-indigo w3-xxlarge"></i>
-  <i class="fa fa-instagram w3-hover-text-purple w3-xxlarge"></i>
-  <i class="fa fa-linkedin w3-hover-text-indigo w3-xxlarge"></i>
+  <a href="https://www.facebook.com/justice.chase.5" target="_blank">
+        <i class="fa fa-facebook-official w3-hover-text-indigo w3-xxlarge"></i>
+    </a>
+  <a href="https://www.linkedin.com/in/justice-chase-338971119" target="_blank">
+        <i class="fa fa-linkedin w3-hover-text-indigo w3-xxlarge"></i>
+    </a>
   <p> <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a></p>
 </footer>
 </body>
