About Page Update: leoprofile changes

--- a/profile/about.html
+++ b/profile/about.html
@@ -33,7 +33,7 @@
         <h5 class="w3-text-grey w3-padding-16"><i class="fa fa-asterisk fa-fw w3-margin-right w3-medium w3-text-teal"></i>Front-End Team</h5>
         <div class="w3-container">
             <p> <a href="justiceprofile.html" target="_blank">Justice Chase</a></p>
-            <p> <a href="" target="">Leo Wang</a></p>
+            <p> <a href="leoprofile.html" target="_blank">Leo Wang</a></p>
             <p> <a href="kimprofile.html" target="_blank">Kimyou By</a></p>
         </div>
         </div>
