--- a/profile/leoprofile.html
+++ b/profile/leoprofile.html
@@ -25,7 +25,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Font-End</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>San Francisco, California</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Cupertino, California</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>lwang4@mail.sfsu.edu</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>408-334-1231</p>
           <hr>
@@ -66,7 +66,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SFSU Student </b></h5>
           <h6 class="w3-text-teal"><i class=""></i>* Computer Science  <span class=""></span></h6>
-          <h6 class="w3-text-teal"><i class=""></i>* Spring 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class=""></i>* Fall 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <hr>
         </div>
       </div>
@@ -84,6 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>De Anza College</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2016</h6>
+            <p>Computer Science</p>
           <h5 class="w3-opacity"><b>San Francisco State University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - current</h6>
           <p>Computer Science</p>
