Added link to about.html

--- a/profile/about.html
+++ b/profile/about.html
@@ -24,7 +24,7 @@
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h5 class="w3-text-grey w3-padding-16"><i class="fa fa-asterisk fa-fw w3-margin-right w3-medium w3-text-teal"></i>Back-End Team</h5>
         <div class="w3-container">
-            <p> <a href="" target="">Damico Shields</a></p>
+            <p> <a href="damicoprofile.html" target="">Damico Shields</a></p>
             <p> <a href="" target="">Jaimes Subroto</a></p>
             <p> <a href="" target="">Andrew Hutzel</a></p>
         </div>
