--- a/profile/andrewprofile.html
+++ b/profile/andrewprofile.html
@@ -30,7 +30,7 @@
 
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="andrewprofile.jpg" style="width:50%" alt="Avatar">
+          <img src="andrew.jpg" style="width:50%" alt="Avatar">
           <div class="w3-container w3-text-grey; text-align: center;">
             <h3>Andrew Hutzel</h3>
           </div>
