--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h5 class="w3-text-grey w3-padding-16"><i class="fa fa-asterisk fa-fw w3-margin-right w3-medium w3-text-teal"></i>Front-End Team</h5>
         <div class="w3-container">
-            <p> <a href="profile/justiceprofile.html" target="_blank">Justice Chase</a></p>
-            <p> <a href="profile/leoprofile.html" target="_blank">Leo Wang</a></p>
-            <p> <a href="profile/kimprofile.html" target="_blank">Kimyou By</a></p>
+            <p> <a href="profile/justiceprofile.html" target="">Justice Chase</a></p>
+            <p> <a href="profile/leoprofile.html" target="">Leo Wang</a></p>
+            <p> <a href="profile/kimprofile.html" target="">Kimyou By</a></p>
         </div>
         </div>
         </div>
