Added profile and Fixed index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="profile/main.css">
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </style>
@@ -30,7 +30,7 @@
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h5 class="w3-text-grey w3-padding-16"><i class="fa fa-asterisk fa-fw w3-margin-right w3-medium w3-text-teal"></i>Back-End Team</h5>
         <div class="w3-container">
-            <p> <a href="" target="">Jaimes Subroto</a></p>
+            <p> <a href="profile/jaimes.html" target="">Jaimes Subroto</a></p>
             <p> <a href="profile/andrewprofile.html" target="">Andrew Hutzel</a></p>
         </div>
         </div>
