About Page Update: leoprofile changes 3

--- a/profile/leoprofile.html
+++ b/profile/leoprofile.html
@@ -99,10 +99,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 <footer class="container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href="https://www.facebook.com/justice.chase.5" target="_blank">
+  <a href="https://www.facebook.com/thefabulousleowang" target="_blank">
         <i class="fa fa-facebook-official w3-hover-text-indigo w3-xxlarge"></i>
     </a>
-  <a href="https://www.linkedin.com/in/justice-chase-338971119" target="_blank">
+  <a href="https://www.linkedin.com/in/thefabulousleowang/" target="_blank">
         <i class="fa fa-linkedin w3-hover-text-indigo w3-xxlarge"></i>
     </a>
   <p> <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a></p>
